--- a/header.html
+++ b/header.html
@@ -5,6 +5,7 @@
     <title>Belajar Push Staging</title>
   </head>
   <body>
-    Belajar dari Github
+    <h1>Belajar dari Github</h1>
+    <h2>Belajar push staging</h2>
   </body>
 </html>
